--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,10 @@ jobs:
        with:
          python-version: '3.12'
 
-     - name: Install dependencies
-       run: |
-         python -m pip install --upgrade pip
-         pip install -r requirements.txt
-         pip install pytest
-
+    - name: Install dependencies
+ run: |
+   python -m pip install --upgrade pip
+   pip install -r app/requirements.txt
+   pip install pytest
      - name: Run tests
        run: pytest
