--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,20 +9,20 @@ jobs:
  test:
    runs-on: ubuntu-latest
 
-  steps:
- - name: Checkout repository
-   uses: actions/checkout@v4
+   steps:
+     - name: Checkout repository
+       uses: actions/checkout@v4
 
- - name: Set up Python
-   uses: actions/setup-python@v5
-   with:
-     python-version: '3.12'
+     - name: Set up Python
+       uses: actions/setup-python@v5
+       with:
+         python-version: "3.12"
 
- - name: Install dependencies
-   run: |
-     python -m pip install --upgrade pip
-     pip install -r app/requirements.txt
-     pip install pytest
+     - name: Install dependencies
+       run: |
+         python -m pip install --upgrade pip
+         pip install -r app/requirements.txt
+         pip install pytest
 
- - name: Run tests
-   run: pytest
+     - name: Run tests
+       run: pytest
